<resources>
    <string name="ADYEN_PUBLIC_KEY">10001|B0EFE4ABF6A7274C88D18C5BBF4E7EC744F238CA7865D39A46F147E91B3248185368F9DBD6ED6E92A0E9EC156F1A8C7AB7E7BD2DA394AAFDD8882A4E238F5E22DF79E4258DB61AF932B9E8A5F51FB293F7F1F84D2CD38777A66C1BABA5725FB97DD084AFEABB32A70BD232189AECA8830F23F15D9E24E6B32CED6A2189F8A4E14D80EB6798F2F65CF47F232848A34211CD6302683B78BE1D59B867B6FF096F646D1CBA971529F6CDEB07CFCDE8AA96E09A44BF110BD1566DD30BBBCB3210E5500238F4A167120A6B9DAEF2D1B8ECA635B8A71671CA2E7863138735F5EC453D856996CB2E5362B6382CA68D8E6D9028395C267AAB8C9C52E6FEA31BA6E1F6805B</string>
    <string name="ALLOWME_API_KEY">CoySPfWPM1MOia3jvqkMvswNz2JN6o9R0Uz4eM40</string>
    <string name="API_BASE_PATH">https://arquiteturaadmin-prd.autopasscorp.com/bff/</string>
    <string name="AUTOPASS_BASE_PATH">https://arquiteturaadmin-prd.autopasscorp.com/</string>
    <string name="CODE_PUSH_APK_BUILD_TIME">1686050844336</string>
    <string name="CodePushDeploymentKey">eyQV1h_sL94Qs02Htg8_0BUs-NJUtxmAzk-UD</string>
    <string name="ENV">PRD</string>
    <string name="ENV_TYPE">release</string>
    <string name="GEMALTO_PROVISIONING_URL">https://arquiteturaadmin-prd.autopasscorp.com/gemalto-provisioning/provisioning/pp</string>
    <string name="GOOGLE_API_KEY">AIzaSyA18-MiSl7xDcKFsS-3QTO3sNes43nOB9k</string>
    <string name="PAKMAN_URL">https://web.pakman.com.br/meu-novo-top</string>
    <string name="PEFISA_SDK_ENV">PRD</string>
    <string name="PEFISA_SDK_IDENTIFIER">Gq25aZEROJPREHCnBcPwBa4HPTcHWiWk</string>
    <string name="PEFISA_SDK_PARTNER">TOP</string>
    <string name="SENTRY_DSN">https://c82186fcb45e4544a237566a28f7f19e@o1060043.ingest.sentry.io/6049226</string>
    <string name="SMARTLOOK_KEY">5c0b6c9bac0e26c5ce9fe31b5b4e1bf7c1ebbf40</string>
    <string name="a3ds2_content_description_info_text_indicator">Info text indicator icon</string>
    <string name="a3ds2_content_description_issuer_logo">Bank logo</string>
    <string name="a3ds2_content_description_scheme_logo">Credit card logo</string>
    <string name="a3ds2_content_description_state_indicator_icon">Expand or collapse expandable info text state indicator icon</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_failed">There was an error while processing your payment. Please try again later.</string>
    <string name="alert_description">Alert</string>
    <string name="allowMeBiometryMessageStartupAnimation">Já vamos começar</string>
    <string name="allowMeBiometryMessageWaitingAnimation">Analisando as Imagens</string>
    <string name="allowMeBiometryTitleStartupAnimation">Aguarde</string>
    <string name="allowMeBiometryTitleWaitingAnimation">Aguarde</string>
    <string name="allowMeCameraMessageFontFamily">sans-serif-light</string>
    <string name="allowMeCameraTitleFontFamily">sans-serif-black</string>
    <string name="allowMeDefaultBiometryTitle">AllowMe - Biometria</string>
    <string name="analysing">Analisando...</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">TOP</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="blink">Pisque os olhos</string>
    <string name="blink_message">Por Favor, Pisque os olhos</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="build_config_package">br.com.autopass.top</string>
    <string name="card_number_4digit">•••• %s</string>
    <string name="catalyst_change_bundle_location">Change Bundle Location</string>
    <string name="catalyst_copy_button">"Copy
"</string>
    <string name="catalyst_debug">Debug</string>
    <string name="catalyst_debug_chrome">Debug with Chrome</string>
    <string name="catalyst_debug_chrome_stop">Stop Chrome Debugging</string>
    <string name="catalyst_debug_connecting">Connecting to debugger...</string>
    <string name="catalyst_debug_error">Failed to connect to debugger!</string>
    <string name="catalyst_debug_open">Open Debugger</string>
    <string name="catalyst_debug_stop">Stop Debugging</string>
    <string name="catalyst_devtools_open">Open React DevTools</string>
    <string name="catalyst_dismiss_button">"Dismiss
(ESC)"</string>
    <string name="catalyst_heap_capture">Capture Heap</string>
    <string name="catalyst_hot_reloading">Enable Fast Refresh</string>
    <string name="catalyst_hot_reloading_auto_disable">Disabling Fast Refresh because it requires a development bundle.</string>
    <string name="catalyst_hot_reloading_auto_enable">Switching to development bundle in order to enable Fast Refresh.</string>
    <string name="catalyst_hot_reloading_stop">Disable Fast Refresh</string>
    <string name="catalyst_inspector">Show Element Inspector</string>
    <string name="catalyst_inspector_stop">Hide Element Inspector</string>
    <string name="catalyst_loading_from_url">Loading from %1$s…</string>
    <string name="catalyst_open_flipper_error">Failed to open Flipper. Please check that Metro is running.</string>
    <string name="catalyst_perf_monitor">Show Perf Monitor</string>
    <string name="catalyst_perf_monitor_stop">Hide Perf Monitor</string>
    <string name="catalyst_reload">Reload</string>
    <string name="catalyst_reload_button">"Reload
(R, R)"</string>
    <string name="catalyst_reload_error">Failed to load bundle. Try restarting the bundler or reconnecting your device.</string>
    <string name="catalyst_report_button">Report</string>
    <string name="catalyst_sample_profiler_disable">Disable Sampling Profiler</string>
    <string name="catalyst_sample_profiler_enable">Enable Sampling Profiler</string>
    <string name="catalyst_settings">Settings</string>
    <string name="catalyst_settings_title">Debug Settings</string>
    <string name="change_payment_method">Change Payment Method</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checkout_afterpay_address_summery">"%1$s, %2$s
%3$s, %4$s, %5$s"</string>
    <string name="checkout_afterpay_agreement_be_be">https://www.afterpay.be/be/footer/betalen-met-afterpay/betalingsvoorwaarden</string>
    <string name="checkout_afterpay_agreement_nl_nl">https://www.afterpay.nl/nl/algemeen/betalen-met-afterpay/betalingsvoorwaarden</string>
    <string name="checkout_afterpay_agreement_text">I agree with the %s of AfterPay</string>
    <string name="checkout_afterpay_agreement_text_condition">payment conditions</string>
    <string name="checkout_afterpay_billing_address">Billing address</string>
    <string name="checkout_afterpay_city">City</string>
    <string name="checkout_afterpay_country">Country</string>
    <string name="checkout_afterpay_date_of_birth">Date of birth</string>
    <string name="checkout_afterpay_delivery_address">Delivery Address</string>
    <string name="checkout_afterpay_email_address">E-mail address</string>
    <string name="checkout_afterpay_female">Female</string>
    <string name="checkout_afterpay_first_name">First name</string>
    <string name="checkout_afterpay_house_number">House number</string>
    <string name="checkout_afterpay_is_not_valid">%1$s is not valid</string>
    <string name="checkout_afterpay_last_name">Last name</string>
    <string name="checkout_afterpay_male">Male</string>
    <string name="checkout_afterpay_personal_details">Personal details</string>
    <string name="checkout_afterpay_personal_details_summery">"%1$s %2$s
%3$s
%4$s"</string>
    <string name="checkout_afterpay_phone_number">Telephone number</string>
    <string name="checkout_afterpay_postal_code">Postal code</string>
    <string name="checkout_afterpay_separate_delivery_address">Specify a separate delivery address</string>
    <string name="checkout_afterpay_street">Street</string>
    <string name="checkout_card_expiry_date_hint">Expiry date</string>
    <string name="checkout_card_holder_hint">Name on card</string>
    <string name="checkout_card_number_hint">Card number</string>
    <string name="checkout_card_number_not_valid">Invalid card number</string>
    <string name="checkout_card_security_code_hint">CVC / CVV</string>
    <string name="checkout_expiry_date_not_valid">Invalid expiration date</string>
    <string name="checkout_holder_name_not_valid">Holder name invalid</string>
    <string name="checkout_iban_not_valid">Invalid account number</string>
    <string name="checkout_security_code_not_valid">Invalid security code</string>
    <string name="checkout_sepa_account_number">Account Number (IBAN)</string>
    <string name="checkout_sepa_holder_name">Holder Name</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">a73007e2ad294ee2ad33150e1a1b765e</string>
    <string name="combobox_description">Combo Box</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
</resources>