<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/camera_root_view" android:background="@color/allowMeInformationBackgroundColor" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.airbnb.lottie.LottieAnimationView android:id="@id/animation_view" android:layout_width="200.0dip" android:layout_height="200.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:lottie_autoPlay="false" app:lottie_loop="true" app:lottie_rawRes="@raw/loading_animation" app:lottie_renderMode="automatic" app:lottie_repeatMode="restart" />
    <TextView android:textSize="@dimen/allowMeCameraTitleTextSize" android:textColor="@color/allowMeCameraTextMessageColor" android:id="@id/title_progress" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/allowMeBiometryTitleStartupAnimation" android:fontFamily="@string/allowMeCameraTitleFontFamily" android:textAlignment="center" android:letterSpacing="-0.02" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/animation_view" />
    <TextView android:textSize="@dimen/allowMeCameraMessageTextSize" android:textColor="@color/allowMeCameraTextMessageColor" android:ellipsize="none" android:id="@id/message_progress" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/allowMeBiometryMessageStartupAnimation" android:fontFamily="@string/allowMeCameraMessageFontFamily" android:textAlignment="center" android:letterSpacing="-0.02" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title_progress" />
    <br.com.allowme.android.allowmesdk.biometry.view.c.e android:gravity="bottom|center" android:id="@id/powered_by_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="16.0dip" />
</androidx.constraintlayout.widget.ConstraintLayout>